# Web-Scraper

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
app/: __init__.py  main.py
app/api/: catalog_images.py  catalog_products.py  deals.py  dependencies.py  errors.py  favorites.py  health.py  products.py  retailers.py  routes.py  saved_searches.py  searches.py
app/core/: brand_catalog.py  config.py  logging.py  rate_limit.py  security.py
app/database/: init_db.py  schema.sql  session.py
app/models/: __init__.py  alert.py  common.py  favorite.py  product.py  retailer.py  saved_search.py  search.py  user.py
app/retailers/: __init__.py  base.py  demo_broken.py  demo_chic.py  demo_outlet.py
app/samples/: products.py
app/schemas/: __init__.py  alert.py  common.py  deals.py  product.py  retailer.py  saved_search.py  search.py
app/scoring/: __init__.py  cython_engine.pyx  loader.py  python_engine.py  scoring.pxd
app/services/: alerts.py  deals.py  notifications.py  pricing.py  retailer_registry.py  search_service.py  users.py
app/ui/: pages.py  theme.py
app/workers/: celery_app.py  tasks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
migrations/: env.py
migrations/versions/: 202607030001_initial.py
scripts/: compile_cython.py  run_local.py
tests/: conftest.py
tests/fixtures/: README.md
(+13 files in other folders)
